fixing broken css

--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,8 @@ body
 	text-align: center;
 	font-family: arial;
 	font-size: 18px;
-	color:#555;
-
+	color:#333;
+}
 
 #main-img
 {
